--- a/css/home.css
+++ b/css/home.css
@@ -16,7 +16,7 @@ a {
 }
 
 .cool-link {
-	background: #AED6F1 !important;
+	background: #aed6f1;
 	display: inline-flex;
 	width: 200px;
 	height: 30px;
