--- a/css/home.css
+++ b/css/home.css
@@ -1,5 +1,6 @@
 * {
 	margin: 0px;
+	overflow: hidden;
 }
 
 a {
@@ -16,17 +17,20 @@ a {
 }
 
 .cool-link {
-	background: #aed6f1;
-	color: black;
+	background: black;
+	color: white;
+	opacity: 0.9;
 	display: inline-flex;
-	width: 30%;
-	height: 100px;
+	width: 280px;
+	height: 210px;
 	line-height: 30px;
 	border-radius: 5px;
 	padding: 10px;
 	margin: 10px;
-	font-family: saira;
+	font-family: 'Raleway', sans-serif !important;
+	font-size: 16px;
 	transition: 0.5s;
+	text-align: center;
 }
 
 .cool-link img {
@@ -34,10 +38,11 @@ a {
 }
 
 .cool-link:hover {
-	background: #85c1e9;
+	opacity: 0.5;
 	transition: 0.5s;
 }
 
-.just-fit {
-	display: inline-flex;
+#translator {
+	background-image: url("../images/translator.jpg");
+	background-size: contain;
 }
