--- a/css/home.css
+++ b/css/home.css
@@ -21,13 +21,13 @@ a {
 	color: white;
 	opacity: 0.9;
 	display: inline-flex;
-	width: 280px;
-	height: 210px;
-	line-height: 30px;
-	border-radius: 5px;
-	padding: 10px;
+	width: 320px;
+	max-width: 100%;
+	height: 240px;
+	border-radius: 10px;
+	padding: 20px;
 	margin: 10px;
-	font-family: 'Raleway', sans-serif !important;
+	font-family: "Raleway", sans-serif !important;
 	font-size: 16px;
 	transition: 0.5s;
 	text-align: center;
