--- a/css/home.css
+++ b/css/home.css
@@ -1,10 +1,11 @@
 a {
 	text-decoration: none !important;
+	margin: 0px;
 }
 
 .top-bar {
-	background-color: #f1f1f1;
-	color: #808b96;
+	background-color: black;
+	color: white;
 	padding: 15px;
 	font-family: "Josefin Sans", "Segoe UI", "Helvetica", arial, sans-serif;
 	font-size: 28px;
@@ -15,12 +16,12 @@ a {
 	color: white;
 	opacity: 0.9;
 	display: inline-block;
-	width: 320px;
+	width: 250px;
 	max-width: 100%;
-	height: 240px;
+	height: 250px;
 	border-radius: 10px;
 	padding: 10px;
-	margin: 10px;
+	margin: 10px 0px 0px 10px;
 	font-family: "Raleway", sans-serif !important;
 	font-size: 16px;
 	transition: 0.5s;
@@ -39,4 +40,11 @@ a {
 #translator {
 	background-image: url("../images/translator.jpg");
 	background-size: contain;
+	background-repeat: no-repeat;
+}
+
+#sudoku-solver {
+	background-image: url("../images/sudoku-solver.jpg");
+	background-size: contain;
+	background-repeat: no-repeat;
 }
