--- a/css/home.css
+++ b/css/home.css
@@ -1,5 +1,6 @@
 * {
 	color: #f2f3f4 !important;
+	text-align: center !important;
 }
 
 a {
@@ -10,10 +11,21 @@ a {
 body {
 	background-color: #bfc9ca !important;
 	min-height: 100%;
+	padding-bottom: 40px;
+}
+
+img {
+	max-width: 100% !important;
+	max-height: 100% !important;
+}
+
+#app-content {
+	padding: 50px;
 }
 
 .top-bar {
-	background-color: #5d6d7e;
+	width: 100%;
+	background-color: #85929e;
 	padding: 15px;
 	font-family: "Josefin Sans", "Segoe UI", "Helvetica", arial, sans-serif;
 	font-size: 28px;
@@ -23,28 +35,28 @@ body {
 .cool-link {
 	color: white;
 	opacity: 0.9;
-	display: inline-block;
-	width: 250px;
-	max-width: 100%;
-	height: 250px;
-	border-radius: 10px;
-	padding: 10px;
-	margin: 10px 0px 0px 10px;
+	display: inline-flex;
+	max-width: 90% !important;
+	width: 320px;
+	height: 180px;
+	padding: 0;
+	margin: 20px;
 	font-family: "Raleway", sans-serif, arial !important;
 	font-size: 16px;
 	transition: 0.5s;
-	text-align: center;
 	background-size: contain;
 	background-repeat: no-repeat;
-}
-
-.cool-link img {
-	margin-right: 10px;
 }
 
 .cool-link:hover {
 	opacity: 0.5;
 	transition: 0.5s;
+}
+
+.block-anchor-tag {
+	width: 100%;
+	height: 100%;
+	padding: 20px;
 }
 
 .custom-footer {
@@ -53,7 +65,7 @@ body {
 	height: 40px;
 	width: 100%;
 	background-color: #85929e;
-	border-top: 1px solid #5d6d7e;
+	border-top: 1px solid #85929e;
 	overflow: hidden;
 	font-family: arial, sans-serif;
 	font-size: 13px !important;
@@ -62,9 +74,9 @@ body {
 }
 
 #translator {
-	background-image: url("../images/translator.jpg");
+	background-image: url("../images/translator-large.jpg");
 }
 
 #sudoku-solver {
-	background-image: url("../images/sudoku-solver.jpg");
+	background-image: url("../images/sudoku-solver-large.jpg");
 }
