--- a/sudoku-solver/css/sudoku-solver.css
+++ b/sudoku-solver/css/sudoku-solver.css
@@ -7,7 +7,7 @@ body {
 }
 
 .top-bar {
-	background-image: url("images/sudoku-solver-top-bar.jpg");
+	background-image: url("../images/sudoku-solver-top-bar.jpg");
 	color: white;
 	padding: 15px;
 	font-family: "Josefin Sans", "Segoe UI", "Helvetica", arial, sans-serif;
