--- a/css/home.css
+++ b/css/home.css
@@ -19,10 +19,11 @@ img {
 	max-height: 100% !important;
 }
 
-#app-container {
-	padding: 50px;
-	width: auto;
+#container {
+	max-width: 1080px;
 	margin: auto;
+	padding-top: 30px;
+	padding-bottom: 90px !important;
 }
 
 .top-bar {
@@ -43,7 +44,7 @@ img {
 	height: 180px;
 	padding: 0;
 	margin: 20px;
-	font-family: "Raleway", sans-serif, arial !important;
+	font-family: "Open Sans", sans-serif, arial !important;
 	font-size: 16px;
 	float: left;
 	transition: 0.5s;
