--- a/css/home.css
+++ b/css/home.css
@@ -46,6 +46,7 @@ img {
 	margin: 20px;
 	font-family: "Open Sans", sans-serif, arial !important;
 	font-size: 16px;
+	text-shadow: 1px 0 0 black, -1px 0 0 black, 0 1px 0 black, 0 -1px 0 black, 1px 1px black, -1px -1px 0 black, 1px -1px 0 black, -1px 1px 0 black;
 	float: left;
 	transition: 0.5s;
 	background-size: contain;
@@ -61,6 +62,12 @@ img {
 	width: 100%;
 	height: 100%;
 	padding: 20px;
+	transition: 0.5s;
+}
+
+.block-anchor-tag:hover {
+	font-size: 18px;
+	transition: 0.5s;
 }
 
 .custom-footer {
