--- a/css/home.css
+++ b/css/home.css
@@ -19,10 +19,38 @@ img {
 }
 
 #container {
-	max-width: 1080px;
+	display: inline-block;
 	margin: auto;
 	padding-top: 30px;
-	padding-bottom: 90px !important;
+	padding-bottom: 30px;
+}
+
+@media screen and (max-width: 719px) {
+	#container {
+		max-width: 360px;
+		transition: 0.5s;
+	}
+}
+
+@media screen and (min-width: 720px) and (max-width: 1079px) {
+	#container {
+		max-width: 720px;
+		transition: 0.5s;
+	}
+}
+
+@media screen and (min-width: 1080px) and (max-width: 1439px) {
+	#container {
+		max-width: 1080px;
+		transition: 0.5s;
+	}
+}
+
+@media screen and (min-width: 1440px) {
+	#container {
+		max-width: 1440px;
+		transition: 0.5s;
+	}
 }
 
 .top-bar {
