--- a/sudoku-solver/css/sudoku-solver.css
+++ b/sudoku-solver/css/sudoku-solver.css
@@ -3,6 +3,8 @@
 }
 
 body {
+	margin: 0;
+	padding: 0;
 	background-color: #fad7a0 !important;
 }
 
@@ -14,23 +16,33 @@ body {
 	font-size: 28px !important;
 }
 
+#container {
+	max-width: 360px !important;
+	display: inline-block;
+	margin: 0 auto;
+	padding: 0;
+	padding-bottom: 30px;
+}
+
 #puzzle-grid {
+	display: inline-block;
+	margin: 0 auto;
 	margin-top: 30px;
 	margin-bottom: 30px;
 }
 
-.row {
-	margin-top: 5px;
-	margin-bottom: 5px;
+.custom-row {
+	margin: 0;
 }
 
-.col {
+.cell {
 	width: 34px !important;
 	height: 34px !important;
+	margin: 2px;
 	display: inline-block;
 	line-height: 34px;
-	border-radius: 3px;
 	color: white;
+	float: left;
 }
 
 input {
@@ -41,7 +53,7 @@ input {
 	margin: 0;
 	padding: 0 !important;
 	border: 1px none;
-	border-radius: 2px;
+	border-radius: px;
 	outline: none;
 	font-size: 20px !important;
 	font-family: "Open Sans", sans-serif, arial !important;
