--- a/sudoku-solver/css/sudoku-solver.css
+++ b/sudoku-solver/css/sudoku-solver.css
@@ -53,7 +53,7 @@ input {
 	margin: 0;
 	padding: 0 !important;
 	border: 1px none;
-	border-radius: px;
+	border-radius: 3px;
 	outline: none;
 	font-size: 20px !important;
 	font-family: "Open Sans", sans-serif, arial !important;
