--- a/css/home.css
+++ b/css/home.css
@@ -64,6 +64,7 @@ img {
 }
 
 .cool-link {
+	position: relative;
 	color: white;
 	opacity: 0.9;
 	display: inline-flex;
@@ -74,7 +75,6 @@ img {
 	margin: 20px;
 	font-family: "Open Sans", sans-serif, arial !important;
 	font-size: 16px;
-	text-shadow: 1px 0 0 black, -1px 0 0 black, 0 1px 0 black, 0 -1px 0 black, 1px 1px black, -1px -1px 0 black, 1px -1px 0 black, -1px 1px 0 black;
 	float: left;
 	transition: 0.5s;
 	background-size: contain;
@@ -82,7 +82,7 @@ img {
 }
 
 .cool-link:hover {
-	opacity: 0.5;
+	opacity: 0.6;
 	transition: 0.5s;
 }
 
@@ -100,6 +100,17 @@ img {
 .block-anchor-tag:hover {
 	font-size: 18px;
 	transition: 0.5s;
+}
+
+.app-name {
+	position: absolute;
+	bottom: 0;
+	width: 100%;
+	height: 40px;
+	line-height: 40px;
+	background-color: #283747;
+	color: white;
+	z-index: -1;
 }
 
 .custom-footer {
