--- a/sudoku-solver/css/sudoku-solver.css
+++ b/sudoku-solver/css/sudoku-solver.css
@@ -64,7 +64,7 @@ input {
 	border: 1px none;
 	border-radius: 3px;
 	outline: none;
-	font-size: 20px !important;
+	font-size: 20px;
 	font-family: "Open Sans", sans-serif, arial !important;
 }
 
