Added flappy bird directory

--- a/css/home.css
+++ b/css/home.css
@@ -138,3 +138,7 @@ img {
 #sudoku-solver {
 	background-image: url("../images/sudoku-solver-large.jpg");
 }
+
+#flappy-bird {
+	background-image: url("../images/flappy-bird-large.jpg");
+}
