--- a/css/home.css
+++ b/css/home.css
@@ -112,9 +112,19 @@ img {
 	width: 100%;
 	height: 40px;
 	line-height: 40px;
-	background-color: darkcyan;
+	background-color: rgba(0, 0, 0, 0.8);
 	color: white;
 	z-index: -1;
+}
+
+.new-release {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 60px;
+	height: 60px;
+	z-index: -1;
+	background-image: url("../images/new.png");
 }
 
 .custom-footer {
