--- a/sudoku-solver/css/sudoku-solver.css
+++ b/sudoku-solver/css/sudoku-solver.css
@@ -120,3 +120,17 @@ input:hover {
 	opacity: 0.4;
 	cursor: not-allowed;
 }
+
+.custom-footer {
+	position: absolute;
+	bottom: 0px;
+	height: 40px;
+	width: 100%;
+	background-color: #c7752c;
+	color: white !important;
+	border-top: 1px solid #e4e4e4;
+	overflow: hidden;
+	font-family: arial, sans-serif;
+	font-size: 13px !important;
+	line-height: 40px;
+}
