--- a/smart-split/css/smart-split.css
+++ b/smart-split/css/smart-split.css
@@ -14,6 +14,10 @@ input {
 	padding: 5px;
 }
 
+input:focus::placeholder {
+	opacity: 0.5;
+}
+
 button {
 	outline: none;
 	border: 0;
@@ -92,7 +96,7 @@ td {
 }
 
 .section-title {
-	margin-top: 50px;
+	margin-top: 40px;
 	color: #5bc5a7;
 	font-weight: bold;
 	font-size: 18px !important;
@@ -100,14 +104,14 @@ td {
 }
 
 .participant {
-	display: inline !important;
+	display: inline-block !important;
 	background-color: #5bc5a7;
 	color: white;
 	text-align: center !important;
 	padding: 5px;
 	padding-left: 15px;
 	padding-right: 15px;
-	margin: 5px;
+	margin-bottom: 5px;
 }
 
 /* ids */
