Changed placeholder css

--- a/smart-split/css/smart-split.css
+++ b/smart-split/css/smart-split.css
@@ -14,8 +14,12 @@ input {
 	padding: 5px;
 }
 
+input::placeholder {
+	opacity: 0.7;
+}
+
 input:focus::placeholder {
-	opacity: 0.5;
+	opacity: 0.4;
 }
 
 button {
