--- a/smart-split/css/smart-split.css
+++ b/smart-split/css/smart-split.css
@@ -104,7 +104,6 @@ td {
 	color: #5bc5a7;
 	font-weight: bold;
 	font-size: 18px !important;
-	/*font-style: italic;*/
 }
 
 .participant {
@@ -116,6 +115,7 @@ td {
 	padding-left: 15px;
 	padding-right: 15px;
 	margin-bottom: 5px;
+	margin-right: 5px;
 }
 
 /* ids */
