--- a/smart-split/css/smart-split.css
+++ b/smart-split/css/smart-split.css
@@ -141,9 +141,10 @@ td {
 }
 
 #add-participant-button {
-	width: 160px;
+	padding-left: 20px;
+	padding-right: 20px;
 	line-height: 30px !important;
-	margin-top: 10px;
+	margin-top: 0;
 }
 
 #delete-participant-button {
@@ -151,4 +152,11 @@ td {
 	color: #c83400;
 	margin-left: 5px;
 	margin-right: -5px;
+}
+
+#add-item-button {
+	padding-left: 20px;
+	padding-right: 20px;
+	line-height: 30px !important;
+	margin-top: 0;
 }
